--- a/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-1-if.mdx
+++ b/src/content/docs/book/part-1-instructions/3-control-flow/1-concepts/03-1-if.mdx
@@ -10,22 +10,30 @@ import Slide02if from './images/control-flow-statements-in-depth/control-flow-if
 import Slide03if from './images/control-flow-statements-in-depth/control-flow-if-statement-03.png';
 import Slide04if from './images/control-flow-statements-in-depth/control-flow-if-statement-04.png';
 import Slide05if from './images/control-flow-statements-in-depth/control-flow-if-statement-05.png';
+import Slide06if from './images/control-flow-statements-in-depth/control-flow-if-statement-06.png';
 
 export const sliderImagesIfStatement = [
   {
     src: Slide01if.src,
-    altText: "Lines 1-3 Ask the user for input, and when given (see the terminal output, the user inputs 'C#'), the input is stored in the variable 'language' on the stack. By the time the program gets to step 4 it is ready to evaluate the if condition. To evaluate the 'if' condition on line 4, the CPU will compare either side of the '==' comparison operator. Because the user has input 'C#' this evaluates to true meaning that the associated 'if' block of code will be evaluated. The program counter is incremented to 5 which indicates the start of the 'if' block, then incremented again to 6 to begin running the code within the 'if' block",
+    altText: "Lines 1-3 get the user input ('C#'), and store it in the variable 'language' on the stack. The program counter is incremented to line 4, ready to evaluate the 'if' condition.",
     tipStart: 1,
     tips: [
-      "Lines 1-3 Ask the user for input, and when given (see the terminal output, the user inputs 'C#'), the input is stored in the variable 'language' on the stack",
-      "By the time the program gets to step 4 it is ready to evaluate the if condition",
+      "Lines 1-3 get the user input ('C#'), and store it in the variable 'language' on the stack",
+      "The program counter is incremented to line 4, ready to evaluate the 'if' condition."
+    ]
+  },
+  {
+    src: Slide02if.src,
+    altText: "To evaluate the 'if' condition on line 4, the CPU will compare either side of the '==' comparison operator. Because the user has input 'C#' this evaluates to true meaning that the associated 'if' block of code will be evaluated. The program counter is incremented to 5 which indicates the start of the 'if' block, then incremented again to 6 to begin running the code within the 'if' block",
+    tipStart: 2,
+    tips: [
       "To evaluate the 'if' condition on line 4, the CPU will compare either side of the '==' comparison operator",
       "Because the user has input 'C#' this evaluates to <span class='booleanTrue'>true</span> meaning that the associated 'if' block of code will be evaluated",
       "The program counter is incremented to 5 which indicates the start of the 'if' block, then incremented again to 6 to begin running the code within the 'if' block"
     ]
   },
   {
-    src: Slide02if.src,
+    src: Slide03if.src,
     altText: "The CPU runs line 6, which outputs the String 'Good choice. C# is a fine language.' to the terminal. The program counter is increased to line 7 and the closing '}' brace indicates the end of the 'if' block. The program counter is then increased again to line 8",
     tipStart: 3,
     tips: [
@@ -35,18 +43,18 @@ export const sliderImagesIfStatement = [
     ]
   },
   {
-    src: Slide03if.src,
+    src: Slide04if.src,
     altText: "Line 8 runs and prings the output 'Great chat!' to the terminal. The program counter is incremented, and the program ends",
-    tipStart: 3,
+    tipStart: 4,
     tips: [
       "Line 8 runs and prings the output 'Great chat!' to the terminal",
       "The program counter is incremented, and the program ends"
     ]
   },
   {
-    src: Slide04if.src,
+    src: Slide05if.src,
     altText: "Let's reset the program counter to line 4, but this time, the user has input 'C++'. This time at line 4, the comparison turns out false. In this case, the CPU will skip the 'if' block betweens line 5-7, and increment the program counter to piont to line 8",
-    tipStart: 4,
+    tipStart: 5,
     tips: [
       "Let's reset the program counter to line 4, but this time, the user has input 'C++'",
       "Now at line 4, the comparison turns out <span class='booleanFalse'>false</span>",
@@ -54,11 +62,11 @@ export const sliderImagesIfStatement = [
     ]
   },
   {
-    src: Slide05if.src,
-    altText: "Line 8 runs (as it did when the 'if' evaluated to true'), and outputs 'Great chat!' to the terminal. The program counter is incremented, and the program ends",
-    tipStart: 5,
+    src: Slide06if.src,
+    altText: "Line 8 runs, and outputs 'Great chat!' to the terminal. The program counter is incremented, and the program ends",
+    tipStart: 6,
     tips: [
-      "Line 8 runs (as it did when the 'if' evaluated to true'), and outputs 'Great chat!' to the terminal",
+      "Line 8 runs, and outputs 'Great chat!' to the terminal",
       "The program counter is incremented, and the program ends"
     ]
   }
@@ -75,19 +83,30 @@ import Slide08ifelseif from './images/control-flow-statements-in-depth/control-f
 import Slide09ifelseif from './images/control-flow-statements-in-depth/control-flow-if-else-if-statement-09.png';
 import Slide10ifelseif from './images/control-flow-statements-in-depth/control-flow-if-else-if-statement-10.png';
 import Slide11ifelseif from './images/control-flow-statements-in-depth/control-flow-if-else-if-statement-11.png';
+import Slide12ifelseif from './images/control-flow-statements-in-depth/control-flow-if-else-if-statement-12.png';
 
 export const sliderImagesIfElseIfStatement = [
   {
     src: Slide01ifelseif.src,
-    altText: "As in the example above, Lines 1-3 result in the user input 'C#' being stored in the variable 'language' and then the if condition at line 4 evaluating to true. The program counter is incremented to 5 which indicates the start of the 'if' block, then incremented again to 6 to begin running the code within the 'if' block",
+    altText: "What happens if the user inputs 'C#'? Lines 1-3 result in the user input 'C#' being stored in the variable 'language' on the stack. The program counter is incremented to 4 which indicates the start of the 'if' block",
     tipStart: 1,
     tips: [
-      "As in the example above, Lines 1-3 result in the user input 'C#' being stored in the variable 'language' and then in the the if condition at line 4 evaluating to true",
-      "The program counter is incremented to 5 which indicates the start of the 'if' block, then incremented again to 6 to begin running the code within the 'if' block"
+      "What happens if the user inputs 'C#'?",
+      "Lines 1-3 result in the user input 'C#' being stored in the variable 'language' on the stack",
+      "The program counter is incremented to 4 which indicates the start of the 'if' block"
     ]
   },
   {
     src: Slide02ifelseif.src,
+    altText: "At line 4, the if statement is evaluated. The comparison evaluates to true. The program counter is incremented to 5 which indicates the start of the 'if' block, then incremented again to 6 to begin running the code within the 'if' block",
+    tipStart: 2,
+    tips: [
+      "At line 4, the if statement is evaluated. The comparison evaluates to <span class='booleanTrue'>true</span>",
+      "The program counter is incremented to 5 which indicates the start of the 'if' block, then incremented again to 6 to begin running the code within the 'if' block"
+    ]
+  },
+  {
+    src: Slide03ifelseif.src,
     altText: "The CPU runs line 6, which outputs the String 'Good choice. C# is a fine language.' to the terminal. The program counter is increased to line 7 and the closing '}' brace indicates the end of the 'if' block. Because the 'if' block was run, the CPU will then skip any subsequent 'else if' statements and therefore the program counter is increased to point to line 12",
     tipStart: 3,
     tips: [
@@ -97,84 +116,84 @@ export const sliderImagesIfElseIfStatement = [
     ]
   },
   {
-    src: Slide03ifelseif.src,
+    src: Slide04ifelseif.src,
     altText: "Line 12 runs and prints the output 'Great chat!' to the terminal. The program counter is incremented and the program ends.",
-    tipStart: 3,
+    tipStart: 4,
     tips: [
       "Line 12 runs and prints the output 'Great chat!' to the terminal",
       "The program counter is incremented and the program ends"
     ]
   },
   {
-    src: Slide04ifelseif.src,
-    altText: "Let's reset back to line 4 and see what happens if the user inputs 'C++'. In this case, the if-condition evaluates to false, and so the CPU will jump the if-block (lines 5-7) and move on to the next 'else-if' condition. This means the program counter will increment to line 8.",
-    tipStart: 4,
+    src: Slide05ifelseif.src,
+    altText: "Let's reset back to line 4 and see what happens if the user had inputted 'C++'. In this case, the if-condition evaluates to false, and so the CPU will jump the 'if' block (lines 5-7) and move on to the next 'else if' condition. This means the program counter will increment to line 8.",
+    tipStart: 5,
     tips: [
-      "Let's reset back to line 4 and see what happens if the user inputs 'C++'",
-      "In this case, the if-condition evaluates to <span class='booleanFalse'>false</span>, and so the CPU will jump the if-block (lines 5-7) and move on to the next 'else-if' condition",
+      "Let's reset back to line 4 and see what happens if the user had inputted 'C++'",
+      "In this case, the if-condition evaluates to <span class='booleanFalse'>false</span>, and so the CPU will jump the 'if' block (lines 5-7) and move on to the next 'else if' condition",
       "This means the program counter will increment to line 8"
     ]
   },
   {
-    src: Slide05ifelseif.src,
-    altText: "To evaluate the 'else-if' condition on line 8, the CPU will evaluate the 'or' logical operator by evaluating the operands left to right. Once a true match for any of it's operands occurs, it will stop processing and evaluate the entire expression as true. If it exhausts its operands and no true match has occurred with any of its operands, it will return false. The first comparison returns false because the user input (C++) does not equal the string 'C', so it moves onto the second operand. The next comparison returns true, and so the entire else-if condition evaluates to true. Therefore the program counter is incremented to lines 9 and then 10 to perform the code in the else-if block.",
-    tipStart: 5,
-    tips: [
-      "To evaluate the 'else-if' condition on line 8, the CPU will evaluate the 'or' logical operator by evaluating the operands left to right<ul><li>Once a true match for any of it's operands occurs, it will stop processing and evaluate the entire expression as true. If it exhausts its operands and no true match has occurred with any of its operands, it will return false</li></ul>",
-      "The first comparison returns <span class='booleanFalse'>false</span> because the user input (C++) does not equal the string 'C', so it moves onto the second operand",
-      "The next comparison returns <span class='booleanTrue'>true</span>, and so the entire else-if condition evaluates to true. Therefore the program counter is incremented to lines 9 and then 10 to perform the code in the else-if block"
-    ]
-  },
-  {
     src: Slide06ifelseif.src,
-    altText: "Line 10 outputs the string 'These are great languages.' to the terminal. The program counter is then incremented to line 11 which indicates the end of the else-if block, and then again to point to the first line following the if statement (line 12)",
+    altText: "To evaluate the 'else if' condition on line 8, the CPU will evaluate the 'or' logical operator by evaluating the operands left to right. Once a true match for any of it's operands occurs, it will stop processing and evaluate the entire expression as true. If it exhausts its operands and no true match has occurred with any of its operands, it will return false. The first comparison returns false because the user input (C++) does not equal the string 'C', so it moves onto the second operand. The next comparison returns true, and so the entire else-if condition evaluates to true. Therefore the program counter is incremented to lines 9 and then 10 to perform the code in the 'else if' block.",
     tipStart: 6,
     tips: [
-      "Line 10 outputs the string 'These are great languages.' to the terminal",
-      "The program counter is then incremented to line 11 which indicates the end of the else-if block, and then again to point to the first line following the if statement (line 12)"
+      "To evaluate the 'else if' condition on line 8, the CPU will evaluate the 'or' logical operator by evaluating the operands left to right<ul><li>Once a true match for any of it's operands occurs, it will stop processing and evaluate the entire expression as true. If it exhausts its operands and no true match has occurred with any of its operands, it will return false</li></ul>",
+      "The first comparison returns <span class='booleanFalse'>false</span> because the user input (C++) does not equal the string 'C', so it moves onto the second operand",
+      "The next comparison returns <span class='booleanTrue'>true</span>, and so the entire else-if condition evaluates to true. Therefore the program counter is incremented to lines 9 and then 10 to perform the code in the 'else if' block"
     ]
   },
   {
     src: Slide07ifelseif.src,
-    altText: "Line 12 outputs 'Great chat!' to the terminal. The program counter then increments and the program ends.",
+    altText: "Line 10 outputs the string 'These are great languages.' to the terminal. The program counter is then incremented to line 11 which indicates the end of the 'else if' block, and then again to point to the first line following the if statement (line 12)",
     tipStart: 7,
+    tips: [
+      "Line 10 outputs the string 'These are great languages.' to the terminal",
+      "The program counter is then incremented to line 11 which indicates the end of the 'else if' block, and then again to point to the first line following the if statement (line 12)"
+    ]
+  },
+  {
+    src: Slide08ifelseif.src,
+    altText: "Line 12 outputs 'Great chat!' to the terminal. The program counter then increments and the program ends.",
+    tipStart: 8,
     tips: [
       "Line 12 outputs 'Great chat!' to the terminal",
       "The program counter then increments and the program ends"
     ]
   },
   {
-    src: Slide08ifelseif.src,
-    altText: "Once again, let's reset and see what happens if the user inputs 'C'. The if-condition evaluates to false, meaning the if-block code (lines 5-7) are skipped and control goes to the next 'else-if' block (line 8)",
-    tipStart: 8,
-    tips: [
-      "Once again, let's reset and see what happens if the user inputs 'C'",
-      "The if-condition evaluates to <span class='booleanFalse'>false</span>, meaning the if-block code (lines 5-7) are skipped and control goes to the next 'else-if' block (line 8)"
-    ]
-  },
-  {
     src: Slide09ifelseif.src,
-    altText: "The CPU evaluates the first comparison in the else-if block at line 8. This evaluates to true, so it will perform the code in the block (lines 9-11). The program counter increases from line 8 to line 9 (start of the else-if block) to line 10 (the first instruction in the block)",
+    altText: "Once again, let's reset and see what happens if the user inputs 'C'. The 'if' condition evaluates to false, meaning the 'if' block code (lines 5-7) are skipped and control goes to the next 'else if' block (line 8)",
     tipStart: 9,
     tips: [
-      "The CPU evaluates the first comparison in the else-if block at line 8",
-      "This evaluates to <span class='booleanTrue'>true</span>, so it will perform the code in the block (lines 9-11)",
-      "The program counter increases from line 8 to line 9 (start of the else-if block) to line 10 (the first instruction in the block)"
+      "Once again, let's reset and see what happens if the user inputs 'C'",
+      "The 'if' condition evaluates to <span class='booleanFalse'>false</span>, meaning the 'if' block code (lines 5-7) are skipped and control goes to the next 'else if' block (line 8)"
     ]
   },
   {
     src: Slide10ifelseif.src,
-    altText: "Line 10 outputs the string 'These are great languages.' to the terminal. The program counter is then incremented to line 11 which indicates the end of the else-if block, and then again to point to the first line following the if statement (line 12)",
+    altText: "The CPU evaluates the first comparison in the 'else if' block at line 8. This evaluates to true, so it will perform the code in the block (lines 9-11). The program counter increases from line 8 to line 9 (start of the 'else if' block) to line 10 (the first instruction in the block)",
     tipStart: 10,
     tips: [
-      "Line 10 outputs the string 'These are great languages.' to the terminal",
-      "The program counter is then incremented to line 11 which indicates the end of the else-if block, and then again to point to the first line following the if statement (line 12)"
+      "The CPU evaluates the first comparison in the 'else if' block at line 8",
+      "This evaluates to <span class='booleanTrue'>true</span>, so it will perform the code in the block (lines 9-11)",
+      "The program counter increases from line 8 to line 9 (start of the 'else if' block) to line 10 (the first instruction in the block)"
     ]
   },
   {
     src: Slide11ifelseif.src,
-    altText: "Line 12 outputs 'Great chat!' to the terminal. The program counter then increments and the program ends.",
+    altText: "Line 10 outputs the string 'These are great languages.' to the terminal. The program counter is then incremented to line 11 which indicates the end of the 'else if' block, and then again to point to the first line following the if statement (line 12)",
     tipStart: 11,
+    tips: [
+      "Line 10 outputs the string 'These are great languages.' to the terminal",
+      "The program counter is then incremented to line 11 which indicates the end of the 'else if' block, and then again to point to the first line following the if statement (line 12)"
+    ]
+  },
+  {
+    src: Slide12ifelseif.src,
+    altText: "Line 12 outputs 'Great chat!' to the terminal. The program counter then increments and the program ends.",
+    tipStart: 12,
     tips: [
       "Line 12 outputs 'Great chat!' to the terminal",
       "The program counter then increments and the program ends"
@@ -187,41 +206,49 @@ import Slide02ifelseifelse from './images/control-flow-statements-in-depth/contr
 import Slide03ifelseifelse from './images/control-flow-statements-in-depth/control-flow-if-else-if-else-statement-03.png';
 import Slide04ifelseifelse from './images/control-flow-statements-in-depth/control-flow-if-else-if-else-statement-04.png';
 import Slide05ifelseifelse from './images/control-flow-statements-in-depth/control-flow-if-else-if-else-statement-05.png';
+import Slide06ifelseifelse from './images/control-flow-statements-in-depth/control-flow-if-else-if-else-statement-06.png';
 
 
 export const sliderImagesIfElseIfElseStatement = [
-  {
+    {
     src: Slide01ifelseifelse.src,
-    altText: "Lines 1-3 result in the user input 'Fortran' being stored in the variable 'language'. This means the if condition at line 4  evaluates to false. The accompanying if-block code is therefore skipped, and the program counter jumps to line 8",
+    altText: "Lines 1-3 run and result in the user input 'Fortran' being stored in the variable 'language' on the stack.",
     tipStart: 1,
     tips: [
-      "Lines 1-3 result in the user input 'Fortran' being stored in the variable 'language'",
-      "This means the if condition at line 4 evaluates to <span class='booleanFalse'>false</span>",
-      "The accompanying if-block code is therefore skipped, and the program counter jumps to line 8"
+      "Lines 1-3 run and result in the user input 'Fortran' being stored in the variable 'language' on the stack"
     ]
   },
   {
     src: Slide02ifelseifelse.src,
-    altText: "The 'else if' condition in line 8 also evaluates to false (since both comparisons are false). The accompanying else if block of code is therefore ignored and the program counter jumps to line 12.",
+    altText: "At line 4, the value of the variable language ('Fortran') is compared to 'C#' and evaulates to false. The accompanying if-block of code is therefore skipped, and the program counter jumps to line 8",
     tipStart: 2,
     tips: [
-      "The else if condition in line 8 also evaluates to <span class='booleanFalse'>false</span> (since both comparisons are false)",
-      "The accompanying else if block of code is therefore ignored and the program counter jumps to line 12"
+      "At line 4, the value of the variable language ('Fortran') is compared to 'C#' and evaulates to <span class='booleanFalse'>false</span>",
+      "The accompanying if-block of code is therefore skipped, and the program counter jumps to line 8"
     ]
   },
   {
     src: Slide03ifelseifelse.src,
-    altText: "Because neither the if condition nor any else-if condition evaluated true, the final else block of code will execute if present (as here). The program counter skips to line 13 which denotes the start of the else block, then on to line 14 which is the first line of code within the block",
+    altText: "The 'else if' condition in line 8 also evaluates to false (since both comparisons are false). The accompanying 'else if' block of code is therefore ignored and the program counter jumps to line 12.",
     tipStart: 3,
     tips: [
-      "Because neither the if condition nor any 'else if' condition evaluated true, the final else block of code will execute if present (as here)",
+      "The 'else if' condition in line 8 also evaluates to <span class='booleanFalse'>false</span> (since both comparisons are false)",
+      "The accompanying 'else if' block of code is therefore ignored and the program counter jumps to line 12"
+    ]
+  },
+  {
+    src: Slide04ifelseifelse.src,
+    altText: "Because neither the 'if' condition nor any 'else if' condition evaluated true, the final 'else' block of code will execute if present (as here). The program counter skips to line 13 which denotes the start of the else block, then on to line 14 which is the first line of code within the block",
+    tipStart: 4,
+    tips: [
+      "Because neither the 'if' condition nor any 'else if' condition evaluated true, the final 'else' block of code will execute if present (as here)",
       "The program counter skips to line 13 which denotes the start of the else block, then on to line 14 which is the first line of code within the block"
     ]
   },
   {
     src: Slide04ifelseifelse.src,
-    altText: "Line 14 runs and prints 'Well... good luck with that !' to the terminal. The program counter advances to line 15 which denotes the end of the else block. The if statement has finished, and the program counter moves to line 16",
-    tipStart: 4,
+    altText: "Line 15 runs and prints 'Well... good luck with that !' to the terminal. The program counter advances to line 15 which denotes the end of the else block. The if statement has finished, and the program counter moves to line 16",
+    tipStart: 5,
     tips: [
       "Line 14 runs and prints 'Well... good luck with that !' to the terminal",
       "The program counter advances to line 15 which denotes the end of the else block",
@@ -229,9 +256,9 @@ export const sliderImagesIfElseIfElseStatement = [
     ]
   },
   {
-    src: Slide05ifelseifelse.src,
+    src: Slide06ifelseifelse.src,
     altText: "Line 16 executes and prints 'Great chat!' to the terminal. The program counter advances and the program ends.",
-    tipStart: 5,
+    tipStart: 6,
     tips: [
       "Line 16 executes and prints 'Great chat!' to the terminal",
       "The program counter advances and the program ends"
